--- a/data/home/brands.yaml
+++ b/data/home/brands.yaml
@@ -2,10 +2,6 @@ enabled: true
 id: "brands"
 
 content:
-  title: "Parceiros"
+  title: "Parceiros PSIKIT"
   items:
-    - "images/brands-samsumg.png"
-    - "images/brands-google.png"
-    - "images/brands-adobe.png"
-    - "images/brands-spotify.png"
-    - "images/brands-dropbox.png"
+    - "images/saude_portugues.png"
